stats smoking
